# drove-cli

./: .gitignore  AGENTS.md  Dockerfile  README.md  drove  drove.py  drovecli.py  droveclient.py  droveutils.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: offline-tests.yml  pypi-test-release.yml  release.yml
drove-cli/: SKILL.md
plugins/: __init__.py  appinstances.py  applications.py  cluster.py  config.py  describe.py  executors.py  localserviceinstances.py  localservices.py  tasks.py  tools.py
plugins/tools/: __init__.py  create_spec.py
sample/: simple_webapp_values.yml  test_app.json  test_task.json
sphinx-support/source/: conf.py  index.rst
templates/: simple_webapp.tpl  test_app.tpl
tests/: README.md  conftest.py  mock_server.py  test_appinstances.py  test_apps.py  test_cli_basics.py  test_cluster.py  test_config.py  test_executor.py  test_localservices.py  test_offline_appinstances.py  test_offline_apps.py  test_offline_cluster.py  test_offline_executor.py  test_offline_full_help.py  test_offline_localservices.py  test_offline_tasks.py  test_tasks.py
tests/fixtures/: cli_test_app.json  cli_test_service.json  cli_test_task.json  offline_test_service.json  test_service.json  test_task.json
