[tool.poetry]
name = "drove-cli"
version = "0.0.4"
description = "Drove Command Line Interface"
authors = ["Santanu Sinha <santanu.sinha@gmail.com>"]
maintainers = [
    "Santanu Sinha <santanu.sinha@gmail.com>",
    "Santanu Sinha <santanu@phonepe.com>",
]
readme = "README.md"
packages = [{include = "plugins"}, {include = "*.py"}]
license = "Apache-2.0"
repository = "https://github.com/PhonePe/drove-cli"
keywords = ["container", "docker", "podman", "distributed-systems", "container-orchestrator"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing"
]

[tool.poetry.dependencies]
python = "^3.9"
tabulate = "^0.9.0"
urllib3 = "^2.2.2"
requests = "^2.32.0"
tenacity = "^9.0.0"
shtab = "1.8.0"
certifi = ">=2024.7.4"

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.0"
pytest-timeout = ">=2.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
drove = "drove:run"
